--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 *{
     text-align: center;
     color: white;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 50pt;
 }
 body{
 
